# pigment

./: .babelrc  .boringfile  .eslintrc  .flowconfig  .gitignore  .gitmodules  BwdFwd.lhs  INSTALL  LICENSE  Makefile  README.md  Setup.hs  TODO  babel.server.js  compiler.js  default.nix  epigram.cabal  karma.conf.js  package.json  pigment.cabal  pigmode.el  polycode.fmt  scratch.agda  scratch.agdai  server.js  shell.nix  stack.yaml  stuff.fmt
api/actions/: index.js
app/: .eslintrc  index.html
app/src/: messages.js
assets/: DSC_0008.psd  favicon.psd  index.html
designmode/: index.html
designmode/assets/: index.css
man/: man.html
models/: Alg-IIR.agda  Containers.agda  Data.agda  Data1.agda  Desc.agda  Desc.v  DescFix.agda  DescStrat.agda  DescStrat.lhs  DescTT.agda  FMSB.agda  IDesc.agda  IDescTT.agda  IDesc_type_type.agda  ILabel.agda  IMDesc.agda  Ornament.agda  Prob.agda  README.Descriptions  Records.agda  RevisedHutton.agda  StratSigma.agda
notes/Epigram2/: Epigram2.tex
notes/Quotients/: pig.sty  quotients.tex
papers/containers-for-dummies/: Makefile  containers.bib  containers.tex
papers/icfp-2010-desc/: Makefile  TODO.org  figure_finite_sets.tex  figure_judgemental_equality.tex  figure_type_checking.tex  figure_type_synthesis.tex  figure_typing_judgements.tex  icfp23l-dagand.ps  icfp23l-dagand.tex  macros.tex  outline.tex  paper.bib  paper.tex  paper_desc.tex  paper_desc_levitation.tex  paper_discussion.tex  paper_idesc.tex  paper_type_theory.tex  pig.sty  propagation.tex  sigplanconf.cls  symbols.tex  type_theory.tex
papers/icfp-2010-talk/: Levitation.agda  Makefile  levitation.tex  pig.sty
papers/someconf-sometime-binding/: paper.tex
papers/stratisfaction/: Makefile  figure_annotated.tex  figure_bidir.tex  figure_ecce.tex  figure_infuse.tex  figure_strat.tex  paper.tex  pig.sty  stratisfaction.bib
papers/type-inference/: Makefile  abstract.ltx  lib-short.bib  lib.bib  macros.tex  makefile  proof-scratch.lhs  scratch.lhs  sigplanconf.cls  statement.lhs  traversable.lhs  type-inference-final.lhs  type-inference-revised.lhs  type-inference.lhs
papers/ydtm-rev/: Makefile  alti.bib  fontlock.sty  fundam.bst  fundam.cls  handy.bib  library.ltx  local.bib  macros.ltx  obsdec.bib  ydtm-rev.tex  ydtm.bib
propagator/: .eslintrc  cell.js  functionPropagator.js  index.js  interval.js  makeCells.js  nullable.js  number.js  package.json  propagator.js  scheduler.js  test.js  type.js
site/: config.toml
site/content/: biblio.md  index.md  navigation.md
site/static/: 960.css
src/: BwdFwd.lhs  Cochon.lhs  Compiler.lhs  Construction.lhs  Containers.lhs  Core.lhs  CoreLoad.lhs  DDesc.lhs  Desc.lhs  DevLoad.lhs  Developments.lhs  DisplayCommands.lhs  DisplayTm.lhs  Distiller.lhs  Elaborator.lhs  Elimination.lhs  Enum.lhs  Epitome.bib  Epitome.lhs  Equality.lhs  Features.lhs  Features.tex  FreeMonad.lhs  Html.js  IDesc.lhs  INu.lhs  Labelled.lhs  Layout.lhs  Lexer.lhs  Main.hs  Main.lhs  Makefile  MissingLibrary.lhs  Naming.lhs  Nat.lhs  Nu.lhs  Operators.lhs  Parsley.lhs  PrettyPrint.lhs  ProofState.lhs  (+28 more)
src-bin/: Pig.hs  Traif.hs
src-bin/Cochon/: Cochon.lhs  CommandLexer.lhs  DevLoad.lhs  PrettyProofState.lhs  Tactics.hs
src-bin/DisplayLang/: Lexer.lhs  PrettyPrint.lhs
src-lib/: Detritus.hs  note
src-lib/Cochon/: CommandLexer.lhs  Controller.hs  Error.lhs  Model.hs  Tactics.hs  TermController.hs
src-lib/DisplayLang/: DisplayTm.lhs  Lexer.lhs  Name.lhs  PrettyPrint.lhs  Scheme.lhs
src-lib/Distillation/: Distiller.lhs  Moonshine.lhs  Scheme.lhs  ShowPity.hs
src-lib/Elaboration/: ElabMonad.lhs  ElabProb.lhs  Elaborator.lhs  Error.hs  MakeElab.lhs  RunElab.lhs  Scheduler.lhs  Wire.lhs  Wire.lhs-boot
src-lib/Evidences/: BetaQuotation.lhs  BetaQuotation.lhs-boot  DefinitionalEquality.lhs  DefinitionalEquality.lhs-boot  Eval.lhs  Eval.lhs-boot  Mangler.lhs  OperatorDSL.lhs  Operators.lhs  Ornament.hs  Ornament.hs-boot  PropositionalEquality.lhs  Tm.lhs  Tm.lhs-boot  TypeChecker.lhs  Utilities.lhs
src-lib/Kit/: BwdFwd.lhs  MissingLibrary.lhs
src-lib/NameSupply/: NameSupplier.lhs  NameSupply.lhs
src-lib/Tactics/: Data.hs  Elimination.lhs  IData.lhs  Matching.hs  Matching.lhs  Ornament.hs  ProblemSimplify.lhs  PropositionSimplify.lhs  Record.hs  Record.lhs  Relabel.lhs  Unification.hs  Unification.lhs
src-web/: index.html
src-web/Cochon/: Cochon.hs  CommandLexer.lhs  Controller.hs  DevLoad.lhs  Error.lhs  Model.hs  Reactify.lhs  Tactics.hs  TermController.hs  View.hs
src-web/css/: reset.less
src-web/hs/: Cochon.hs  DesignMode.hs  Keyboard.hs  Main.hs  Reactify.lhs  View.hs
src-web/js/: design-server.js  exports.js  index.js  mui.js  package.json  pigment-server.js  server.js  webpack-prod.config.js  webpack.config.js
src/Cochon/: Cochon.hs  Cochon.lhs  CommandLexer.lhs  Controller.hs  Detritus.lhs  DevLoad.lhs  DisplayCommands.lhs  Error.lhs  Model.hs  Model.lhs  Reactify.lhs  Tactics.hs  TermController.hs  View.hs
src/Compiler/: Compiler.lhs  OpDef.lhs  OpDef.lhs-boot
src/Detritus/: Cochon.lhs  Construction.lhs  (+25 more)
test/: Ackermann.pig  Ackermann2.pig  Baz.pig  Below.pig  Both.dev  Both.pig  BugBoxSum.pig  BugDescLoop.pig  BugEqgreenMu.pig  BugEqgreenMu2.pig  BugFakeType.pig  BugGoalUnification.pig  BugInduction.pig  BugLabelLookup.pig  BugLetDependent.pig  BugLetLambda.pig  BugModuleRelabel.pig  BugNameOrder.pig  BugNatDesc.pig  BugUnliftedScheme.pig  Cat.pig  DataDecl.pig  Demo.pig  Differentiation.pig  EdwinBug.pig  Elab.pig  Elim.pig  Elim1.pig  Elim2.pig  Elim3.pig  ElimEquality.pig  ElimSplit.pig  ElimSwitch.pig  FeatureMultiInduction.pig  Fibonacci.pig  Fin.pig  Foo.pig  GenericCase.pig  IData.pig  Image.pig  (+79 more)
tests/: AlphaConversion.hs  Data.hs  Desc.hs  Elab.hs  Main.hs  Mangler.hs  NameSupply.hs  OTT.hs  Operators.hs  Ornament.hs  PigmentPrelude.hs  Records.hs  TacticParse.hs  Tactics.hs  hlint.hs
web/: community.html  default.css  docs.html  download.html  index.alt.html  index.html  reportbug.html  style.css  styles.css
webpack/: dev.config.js  prod.config.js  webpack-dev-server.js  webpack-isomorphic-tools.js
(+446 files in other folders)
