name:           pigment
version:        0.2
cabal-version:  >= 1.6
license:        MIT
license-file:   LICENSE
category:       Language
description:    Cooperative / Humane Programming
author:         The Epigram Posse, Joel Burget
maintainer:     joelburget@gmail.com
synopsis:       Interactively program dependent types online.
build-type:     Simple

homepage: https://github.com/joelburget/pigment
bug-reports: https://github.com/joelburget/pigment/issues

source-repository head
  type: git
  location: https://github.com/joelburget/pigment.git

executable pigment
  build-depends:
      base >= 4.6,
      lens-family == 1.2.0,
      mtl >= 2.2,
      transformers == 0.4.2.0,
      void >= 0.7,
      newtype == 0.2,
      pretty >= 1.1,
      recursion-schemes == 4.1,
      ghcjs-base >= 0.1,
      ghcjs-dom >=0.1.1.1,
      ghcjs-prim >= 0.1.0.0,
      react-haskell-ghcjs == 1.3.0.0
  main-is:        Main.lhs
  hs-source-dirs: src
  js-sources:
      src/js/react.js
      src/js/react-stubs.js
