name:           pigment
version:        0.2
cabal-version:  >= 1.8
license:        MIT
license-file:   LICENSE
category:       Language
description:    Cooperative / Humane Programming
author:         The Epigram Posse, Joel Burget
maintainer:     joelburget@gmail.com
synopsis:       Interactively program dependent types online.
build-type:     Simple

homepage: https://github.com/joelburget/pigment
bug-reports: https://github.com/joelburget/pigment/issues

source-repository head
  type: git
  location: https://github.com/joelburget/pigment.git

flag ghcjs
    description: Tell cabal we are using ghcjs
    default: False

executable pigment
  build-depends:
      base >= 4.6,
      lens-family == 1.2.0,
      lens-family-th == 0.4.1.0,
      mtl >= 2.2,
      transformers == 0.4.2.0,
      errors == 1.4.7,
      text >= 1.2,
      void >= 0.7,
      newtype == 0.2,
      pretty >= 1.1,
      recursion-schemes == 4.1,
      template-haskell >= 2.9

  if flag(ghcjs)
      build-depends:
          ghcjs-base >= 0.1,
          ghcjs-dom >=0.1.1.1,
          ghcjs-prim >= 0.1.0.0,
          react-haskell == 1.3.0.0,
          material-ui == 0.1.0.0
  main-is:        Main.hs
  hs-source-dirs: src
  js-sources:
      src/js/mui.js
      src/js/react-stubs.js

library
  build-depends:
      base >= 4.6,
      lens-family == 1.2.0,
      lens-family-th == 0.4.1.0,
      mtl >= 2.2,
      transformers == 0.4.2.0,
      errors == 1.4.7,
      text >= 1.2,
      void >= 0.7,
      newtype == 0.2,
      pretty >= 1.1,
      recursion-schemes == 4.1,
      template-haskell >= 2.9
  if flag(ghcjs)
      build-depends:
          ghcjs-base >= 0.1,
          ghcjs-dom >=0.1.1.1,
          ghcjs-prim >= 0.1.0.0,
          react-haskell == 1.3.0.0,
          material-ui == 0.1.0.0
  exposed-modules:
    DisplayLang.DisplayTm
    DisplayLang.Lexer
    DisplayLang.Name
    DisplayLang.PrettyPrint
    DisplayLang.Scheme
    DisplayLang.TmParse
    DisplayLang.QQ
    Distillation.Distiller
    Distillation.Moonshine
    Distillation.Scheme
    Elaboration.ElabMonad
    Elaboration.ElabProb
    Elaboration.Elaborator
    Elaboration.MakeElab
    Elaboration.RunElab
    Elaboration.Scheduler
    Elaboration.Wire
    Evidences.BetaQuotation
    Evidences.DefinitionalEquality
    Evidences.Eval
    Evidences.Mangler
    Evidences.OperatorDSL
    Evidences.Operators
    Evidences.PropositionalEquality
    Evidences.Tm
    Evidences.TypeChecker
    Evidences.Utilities
    Kit.BwdFwd
    Kit.ListZip
    Kit.MissingLibrary
    Kit.Parsley
    Kit.Trace
    NameSupply.NameSupplier
    NameSupply.NameSupply
    ProofState.Edition.Entries
    ProofState.Edition.FakeRef
    ProofState.Edition.GetSet
    ProofState.Edition.Navigation
    ProofState.Edition.News
    ProofState.Edition.ProofContext
    ProofState.Edition.ProofState
    ProofState.Edition.Scope
    ProofState.Interface.Anchor
    ProofState.Interface.Definition
    ProofState.Interface.Lifting
    ProofState.Interface.Module
    ProofState.Interface.Name
    ProofState.Interface.NameResolution
    ProofState.Interface.Parameter
    ProofState.Interface.ProofKit
    ProofState.Interface.Search
    ProofState.Interface.Solving
    ProofState.Structure.Developments
    ProofState.Structure.Entries
    SourceLang.Elaborator
    SourceLang.Example
    SourceLang.Parser
    SourceLang.Structure
    Tactics.Data
    Tactics.Elimination
    Tactics.IData
    Tactics.Matching
    Tactics.ProblemSimplify
    Tactics.PropositionSimplify
    Tactics.Record
    Tactics.Relabel
    Tactics.Unification
  if flag(ghcjs)
    exposed-modules:
      Cochon.Cochon
      Cochon.CommandLexer
      Cochon.Controller
      Cochon.TermController
      -- Cochon.DevLoad
      Cochon.Error
      Cochon.Model
      Cochon.Reactify
      Cochon.View
  else
    exposed-modules:
      Traif
  ghc-options: -Wall -fwarn-tabs -O2 -fdicts-cheap -funbox-strict-fields -fmax-simplifier-iterations=10
  hs-source-dirs: src


-- quickcheck
test-suite properties
  type: exitcode-stdio-1.0
  main-is: properties.hs
  ghc-options: -w -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: tests
  build-depends:
    base,
    pigment,
    QuickCheck           >= 2.4,
    test-framework       >= 0.6,
    test-framework-hunit >= 0.2,
    test-framework-th    >= 0.2

test-suite unittests
  type: exitcode-stdio-1.0
  main-is: unittests.hs
  ghc-options: -Wall -threaded
  hs-source-dirs: tests
  build-depends:
    base,
    pigment,
    hunit >= 1.2.5

test-suite hlint
  type: exitcode-stdio-1.0
  main-is: hlint.hs
  ghc-options: -w -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: tests

  build-depends:
    base,
    pigment,
    hlint >= 1.7
