name:           pigment
version:        0.2
cabal-version:  >= 1.8
license:        MIT
license-file:   LICENSE
category:       Language
description:    Cooperative / Humane Programming
author:         The Epigram Posse, Joel Burget
maintainer:     joelburget@gmail.com
synopsis:       Interactively program dependent types online.
build-type:     Simple

homepage: https://github.com/joelburget/pigment
bug-reports: https://github.com/joelburget/pigment/issues

source-repository head
  type: git
  location: https://github.com/joelburget/pigment.git

flag ghcjs
    description: Tell cabal we are using ghcjs
    default: False

library
  hs-source-dirs: src-lib
  build-depends:
      base >= 4.6 && < 5,
      lens-family == 1.2.0,
      lens-family-th == 0.4.1.0,
      mtl >= 2.1,
      transformers >= 0.3,
      errors == 1.4.7,
      text >= 1.2,
      void >= 0.7,
      newtype == 0.2,
      pretty >= 1.1,
      recursion-schemes >= 4.1
  exposed-modules:
    DisplayLang.DisplayTm
    DisplayLang.Lexer
    DisplayLang.Name
    DisplayLang.PrettyPrint
    DisplayLang.Scheme
    DisplayLang.TmParse
    Distillation.Distiller
    Distillation.Moonshine
    Distillation.Scheme
    Elaboration.ElabMonad
    Elaboration.ElabProb
    Elaboration.Elaborator
    Elaboration.Error
    Elaboration.MakeElab
    Elaboration.RunElab
    Elaboration.Scheduler
    Elaboration.Wire
    Evidences.DefinitionalEquality
    Evidences.Eval
    Evidences.Mangler
    Evidences.OperatorDSL
    Evidences.Operators
    Evidences.PropositionalEquality
    Evidences.Tm
    Evidences.TypeChecker
    Evidences.Utilities
    Kit.BwdFwd
    Kit.ListZip
    Kit.MissingLibrary
    Kit.Parsley
    Kit.Trace
    NameSupply.NameSupplier
    NameSupply.NameSupply
    ProofState.Edition.Entries
    ProofState.Edition.FakeRef
    ProofState.Edition.GetSet
    ProofState.Edition.Navigation
    ProofState.Edition.News
    ProofState.Edition.ProofContext
    ProofState.Edition.ProofState
    ProofState.Edition.Scope
    ProofState.Interface.Anchor
    ProofState.Interface.Definition
    ProofState.Interface.Lifting
    ProofState.Interface.Module
    ProofState.Interface.Name
    ProofState.Interface.NameResolution
    ProofState.Interface.Parameter
    ProofState.Interface.ProofKit
    ProofState.Interface.Search
    ProofState.Interface.Solving
    ProofState.Structure.Developments
    ProofState.Structure.Entries
    Tactics.Data
    Tactics.Elimination
    Tactics.IData
    Tactics.Matching
    Tactics.ProblemSimplify
    Tactics.PropositionSimplify
    Tactics.Record
    Tactics.Relabel
    Tactics.Unification
    Cochon.CommandLexer
    Cochon.Controller
    Cochon.Model
    Cochon.Tactics
    Cochon.TermController
  ghc-options: -Wall -fwarn-tabs -fdicts-cheap -funbox-strict-fields -fmax-simplifier-iterations=10

executable pigment
  main-is:        Main.hs
  if !flag(ghcjs)
    buildable: False
  hs-source-dirs: src-web/hs, src-lib
  js-sources:
      src-web/js/stubs/react.js
      src-web/js/stubs/react-stubs.js
  build-depends:
      base >= 4.6 && < 5,
      lens-family == 1.2.0,
      lens-family-th == 0.4.1.0,
      mtl >= 2.1,
      transformers >= 0.3,
      errors == 1.4.7,
      text >= 1.2,
      void >= 0.7,
      newtype == 0.2,
      pretty >= 1.1,
      recursion-schemes >= 4.1,
      react-haskell == 1.4.0.0

executable Pig
  if flag(ghcjs)
    buildable: False
  main-is: Pig.hs
  hs-source-dirs: src-bin
  build-depends:
      base >= 4.6 && < 5,
      lens-family == 1.2.0,
      lens-family-th == 0.4.1.0,
      mtl >= 2.1,
      transformers >= 0.3,
      errors == 1.4.7,
      text >= 1.2,
      void >= 0.7,
      newtype == 0.2,
      pretty >= 1.1,
      recursion-schemes >= 4.1,
      filepath >= 1.3,
      pigment

executable Traif
  if flag(ghcjs)
    buildable: False
  main-is: Traif.hs
  hs-source-dirs: src-bin
  build-depends:
      base >= 4.6 && < 5,
      lens-family == 1.2.0,
      lens-family-th == 0.4.1.0,
      mtl >= 2.1,
      transformers >= 0.3,
      errors == 1.4.7,
      text >= 1.2,
      void >= 0.7,
      newtype == 0.2,
      pretty >= 1.1,
      recursion-schemes >= 4.1,
      pigment

executable PigmentPrelude
  if flag(ghcjs)
    buildable: False
  main-is: PigmentPrelude.hs
  hs-source-dirs: tests
  build-depends:
    base >= 4.6 && < 5,
    pigment,
    text >= 1.2,
    -- QuickCheck           >= 2.4,
    HUnit                >= 1.2.5,
    tasty       >= 0.7,
    tasty-hunit >= 0.9

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  ghc-options: -Wall -threaded
  hs-source-dirs: tests
  build-depends:
    base >= 4.6 && < 5,
    pigment,
    text >= 1.2,
    -- QuickCheck           >= 2.4,
    HUnit                >= 1.2.5,
    tasty       >= 0.7,
    tasty-hunit >= 0.9

test-suite hlint
  type: exitcode-stdio-1.0
  main-is: hlint.hs
  ghc-options: -w -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: tests

  build-depends:
    base >= 4.6 && < 5,
    pigment,
    hlint >= 1.7
